--- a/css/styles.css
+++ b/css/styles.css
@@ -57,14 +57,31 @@ body {
 	font-weight: 400;
 }
 
+header {
+    background-color: #ffffff;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 a {
 	text-decoration: none;
 	color: #2e2f42;
 }
 
-h1,
-h2 {
+.invisible-head-one,
+.invisible-head-two {
 	color: rgba(0, 0, 0, 0);
+}
+
+.studio-hero {
+    background-color: #434455;
+}
+.studio-hero-header {
+    color: #ffffff;
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 600;
+font-size: 56px;
+line-height: 60px;
 }
 
 .listofbuttons {
@@ -75,7 +92,8 @@ h2 {
 .nav-button-web,
 .nav-button-app,
 .nav-button-design,
-.nav-button-marketing {
+.nav-button-marketing,
+.button-order-service {
 	color: #4d5ae5;
 	background-color: #f4f4fd;
 	border: 1px solid #e7e9fc;
@@ -96,7 +114,9 @@ h2 {
 .nav-button-design:hover,
 .nav-button-design:focus,
 .nav-button-marketing:hover,
-.nav-button-marketing:focus {
+.nav-button-marketing:focus,
+.button-order-service:hover,
+.button-order-service:focus {
 	color: #ffffff;
 	background-color: #4d5ae5;
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -105,6 +125,10 @@ h2 {
 	border: none;
 }
 
-.products-list {
+.products-list,  {
 	color: rgba(0, 0, 0, 0);
+}
+
+.section-2, .section-3 {
+    background-color: #ffffff;
 }
