--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,3 @@
-/*
-Raleway зробив 800
-заяві div наче прибрав
-ієрархію h1-h2-h3 змінив у портфоліо,але в студії після h1 ідуть h3,але є більш значний h2
-CSS змінні зробив і наче всюди замінив на сolor var
-line-heigt змінив на відносні
-селектори тегів змінив на селектори классів
-У Хедер видалив бєкгоаунд колор
-
-
-Зробив h2 прихований у студіі
-прибрав тіні
-видалив visited
-Змінив колір hover,focus,active 
-Вказав font-family: inharit для кнопки
-Картинку взяв з 6-го ДЗ
-
-Ви минулого разу сказали про зміну кольору посилань на фіолетовий і я зплутався,гадав що треба зробити візітед,а ви певно мали на увази ховер,фокус,ектів
-*/
-
 /* total */
 
 html {
@@ -319,10 +299,11 @@ header .container {
 
 /* portfolio */
 
+/* top-line */
 .top-line-portfolio {
 	box-shadow: 0 0 1px 0 rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-
+/* navigation */
 .button-list {
 	display: flex;
 	justify-content: center;
@@ -371,6 +352,7 @@ header .container {
 	cursor: pointer;
 	border: none;
 }
+/* products */
 .products-list,
 .products-list2,
 .products-list3 {
